--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mysql2": "^3.10.1",
+    "nodemailer": "^6.9.14",
     "sequelize": "^6.37.3"
   }
 }
